# sherlock.lv2

./: .gitlab-ci.yml  ChangeLog  README.md  atom_inspector.c  atom_inspector_nk.c  encoder.h  encoder.l  manifest.ttl.in  meson.build  midi_inspector.c  midi_inspector_nk.c  osc_inspector.c  osc_inspector_nk.c  sherlock.c  sherlock.h  sherlock.ttl  sherlock_nk.c  sherlock_nk.h  sherlock_ui.ttl
pugl/test/: test_redisplay.c
subprojects/nk_pugl/: meson.build
subprojects/nk_pugl/nk_pugl/: nk_pugl.h
